refactor: 홈화면 개편
